# top-paper-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  README_CN.md  SECURITY.md  manifest.json  pyproject.toml  server.json  smithery.yaml
.codex-plugin/: plugin.json
scripts/: build-mcpb.sh
skills/top-paper-mcp-server/: SKILL.md
src/top_paper_mcp_server/: __main__.py  config.py  server.py
src/top_paper_mcp_server/resources/: papers.py
src/top_paper_mcp_server/tools/: __init__.py  alerts.py  citation_graph.py  conference_download.py  conference_search.py  download.py  get_abstract.py  huggingface.py  preference.py  query_expansion.py  related_papers.py  search.py  semantic_search.py  smart_search.py
src/top_paper_mcp_server/tools/conferences/: __init__.py  aaai_ijcai.py  acm.py  base.py  cvf.py  eccv.py  icml.py  mlanthology.py  neurips.py  openreview.py
tests/: test_config.py  test_mcp_tool_error_semantics.py  test_transport.py
tests/prompts/: test_prompt_integration.py  test_prompts.py
tests/tools/: test_alerts.py  test_citation_graph.py  test_conference_download.py  test_conference_search.py  test_conference_sources_integration.py  test_download.py  test_get_abstract.py  test_huggingface.py  test_pmlr_source.py  test_preference.py  test_query_expansion.py  test_related_papers.py  test_search.py  test_semantic_search.py  test_smart_search.py
